--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jovian Careers</title>
+    <style>
+        h1 {
+            font-size: 40px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-weight: normal;
+            color: rgb(100, 100, 100);
+            text-align: center;
+        }
+
+        #banner {
+            width: 100%;
+            height: 360px;
+            object-fit: cover;
+        }
+
+        h2 {
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 32px;
+            color: rgb(100,100,100);
+            text-align: center;
+            font-weight: normal;
+
+        }
+
+        .bodytext{
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            color: rgb(80, 80, 80);
+
+        }
+
+        #container {
+            max-width: 720px;
+            /* margin-left: 200px; */
+            margin: 0 auto 0 auto;
+        }
+    </style>
 </head>
 <body>
-    Hello there, you'll learn about the job openings at Jovian here.
+    <div id="container">
+        <h1>Jovian Careers</h1>
+        <img id="banner" src="static/banner.jpg" alt="No image">
+        <h2> About Jovian</h2>
+            <p class="bodytext">
+                Lorem ipsum odor amet, consectetuer adipiscing elit. Potenti leo hendrerit non aliquam lectus lacus tincidunt auctor. Mauris suspendisse ullamcorper purus habitasse dis fames. Pellentesque ut bibendum scelerisque odio himenaeos per nulla dis mus? Sapien fringilla ut a aptent imperdiet. Aliquet euismod phasellus lacus tempus, leo dignissim. Sagittis congue pulvinar mi massa, hac justo.
+            </p>
+        <h2>Open Positions</h2>
+        <p class="bodytext">TODO - SHOW JOB LISTINGS</p>
+        <div style="text-align: center;">
+            <button>Contact Us</button>
+            <p>Copyright 2024, Jovian</p>
+        </div>
+</div>
 </body>
 </html>
