--- a/templates/home.html
+++ b/templates/home.html
@@ -4,55 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jovian Careers</title>
-    <style>
-        h1 {
-            font-size: 40px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            font-weight: normal;
-            color: rgb(100, 100, 100);
-            text-align: center;
-        }
 
-        #banner {
-            width: 100%;
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <style>
+        #banner{
             height: 360px;
+            width: 100%;
             object-fit: cover;
         }
-
-        h2 {
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            font-size: 32px;
-            color: rgb(100,100,100);
-            text-align: center;
-            font-weight: normal;
-
-        }
-
-        .bodytext{
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            color: rgb(80, 80, 80);
-
-        }
-
-        #container {
-            max-width: 720px;
-            /* margin-left: 200px; */
-            margin: 0 auto 0 auto;
-        }
     </style>
+    
 </head>
 <body>
-    <div id="container">
-        <h1>Jovian Careers</h1>
-        <img id="banner" src="static/banner.jpg" alt="No image">
-        <h2> About Jovian</h2>
-            <p class="bodytext">
+    <div class="container">
+        <h1 class="text-center mt-2 mb-4">Jovian Careers</h1>
+        <img class="img-fluid" id="banner" src="static/banner.jpg" alt="No image" height="300px">
+        <h2 class="text-center mt-2 mb-4"> About Jovian</h2>
+            <p class="lead">
                 Lorem ipsum odor amet, consectetuer adipiscing elit. Potenti leo hendrerit non aliquam lectus lacus tincidunt auctor. Mauris suspendisse ullamcorper purus habitasse dis fames. Pellentesque ut bibendum scelerisque odio himenaeos per nulla dis mus? Sapien fringilla ut a aptent imperdiet. Aliquet euismod phasellus lacus tempus, leo dignissim. Sagittis congue pulvinar mi massa, hac justo.
             </p>
-        <h2>Open Positions</h2>
-        <p class="bodytext">TODO - SHOW JOB LISTINGS</p>
-        <div style="text-align: center;">
-            <button>Contact Us</button>
+        <h2 class="text-center mt-2 mb-4" >Open Positions </h2>
+        <p >TODO - SHOW JOB LISTINGS</p>
+        <div class="text-center">
+            <button class="btn btn-primary btn-lg">Contact Us</button>
             <p>Copyright 2024, Jovian</p>
         </div>
 </div>
