made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
             <p class="lead">
                 Lorem ipsum odor amet, consectetuer adipiscing elit. Potenti leo hendrerit non aliquam lectus lacus tincidunt auctor. Mauris suspendisse ullamcorper purus habitasse dis fames. Pellentesque ut bibendum scelerisque odio himenaeos per nulla dis mus? Sapien fringilla ut a aptent imperdiet. Aliquet euismod phasellus lacus tempus, leo dignissim. Sagittis congue pulvinar mi massa, hac justo.
             </p>
-        <h2 class="text-center mt-2 mb-4" >Open Positions </h2>
+        <h2 class="text-center mt-2 mb-4" >Job Openings</h2>
         <p >
             {%for job in jobs%}
                 {% include 'jobitem.html'%}
