--- a/templates/home.html
+++ b/templates/home.html
@@ -9,31 +9,41 @@
 
     <style>
         #banner{
-            height: 360px;
+            height: 380px;
             width: 100%;
             object-fit: cover;
+            margin-bottom: 16px;
         }
     </style>
     
 </head>
 <body>
+    {% include 'nav.html' %}
+    <img  class=" img-fluid" id="banner" src="/static/do-something-great.jpg" alt="No image" >
+
     <div class="container">
         <h1 class="text-center mt-2 mb-4">{{company}} Careers</h1>
-        <img class="img-fluid" id="banner" src="static/banner.jpg" alt="No image" height="300px">
-        <h2 class="text-center mt-2 mb-4"> About Jovian</h2>
-            <p class="lead">
-                Lorem ipsum odor amet, consectetuer adipiscing elit. Potenti leo hendrerit non aliquam lectus lacus tincidunt auctor. Mauris suspendisse ullamcorper purus habitasse dis fames. Pellentesque ut bibendum scelerisque odio himenaeos per nulla dis mus? Sapien fringilla ut a aptent imperdiet. Aliquet euismod phasellus lacus tempus, leo dignissim. Sagittis congue pulvinar mi massa, hac justo.
-            </p>
-        <h2 class="text-center mt-2 mb-4" >Job Openings</h2>
-        <p >
-            {%for job in jobs%}
-                {% include 'jobitem.html'%}
-            {%endfor%}
-        </p>
-        <div class="text-center">
-            <button class="btn btn-primary btn-lg">Contact Us</button>
-            <p>Copyright 2024, Jovian</p>
+        <div class="row" style="margin-bottom: 16px;">
+            <div class="col-md-6" >
+                <p class="lead">
+                    Lorem ipsum odor amet, consectetuer adipiscing elit. Potenti leo hendrerit non aliquam lectus lacus tincidunt auctor. Mauris suspendisse ullamcorper purus habitasse dis fames. Pellentesque ut bibendum scelerisque odio himenaeos per nulla dis mus? Sapien fringilla ut a aptent imperdiet. Aliquet euismod phasellus lacus tempus, leo dignissim. Sagittis congue pulvinar mi massa, hac justo.
+                </p>
+            </div>
+            <div class=" d-none d-md-block col-md-6">
+
+                <img src="/static/banner.jpg" alt="Loading" style="height: 320px; border-radius: 4px;">
+            </div>
         </div>
-</div>
+                <h2 class="text-center mt-2 mb-4" >Job Openings</h2>
+                <p >
+                    {%for job in jobs%}
+                    {% include 'jobitem.html'%}
+                    {%endfor%}
+                </p>
+                <div class="text-center">
+                    <a href="mailto:madhukar.bhaktha.591@gmail.com?subject=Question%20about%20Job%20Openings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20Question%3A%20%3Center%20question%20here%3E" class="btn btn-primary btn-lg">Contact Us</a>
+                </div>
+    </div>
+    {% include 'footer.html' %}
 </body>
 </html>
